# stub-oidc-server

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
oidc_server/: app.py  grants.py  jwts.py  tokens.py  web_client.py
tests/: conftest.py  test_app.py
