[project]
name = "oidc_server"
version = "0.1.0"
description = "Stub OIDC server for testing."
requires-python = ">=3.12"
dependencies = [
    "authlib~=1.3.0",
    "flask~=3.0.0",
    "requests~=2.32.0",
]

[project.optional-dependencies]
dev = [
    "black~=24.8.0",
    "isort~=5.13.0",
    "mypy~=1.11.0",
    "ruff~=0.6.0",
    "types-requests~=2.32.0.0"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

# black

[tool.black]
line-length = 120

# isort

[tool.isort]
profile = "black"

# mypy

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "authlib.*"
]
ignore_missing_imports = true

# ruff

[tool.ruff]
line-length = 120
